fix UserDaoHibernateImpl